<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mitem_name_1" android:title="@string/mitem_name_1"></item>
    <item android:id="@+id/mitem_name_2" android:title="@string/mitem_name_2"></item>
    <item android:id="@+id/mitem_name_3" android:title="@string/mitem_name_3"></item>
    <item android:id="@+id/mitem_name_4" android:title="@string/mitem_name_4"></item>
    <item android:id="@+id/mitem_name_5" android:title="@string/mitem_name_5"></item>
    <item android:id="@+id/mitem_name_6" android:title="@string/mitem_name_6"></item>
    <item android:id="@+id/mitem_name_7" android:title="@string/mitem_name_7"></item>
    <item android:id="@+id/mitem_name_8" android:title="@string/mitem_name_8"></item>
    <item android:id="@+id/mitem_name_9" android:title="@string/mitem_name_9"></item>
    <item android:id="@+id/mitem_name_10" android:title="@string/mitem_name_10"></item>
</menu>