<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootRL"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scaleType="centerCrop">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/topleft_switch"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="80dp"
        android:text="@string/buttontext_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bottomleft_switch"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="84dp"
        android:layout_marginStart="204dp"
        android:text="@string/buttontext_switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/top_scale"
        android:layout_width="79dp"
        android:layout_height="84dp"
        android:layout_marginEnd="472dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="49dp"
        android:text="@string/buttontext_scale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bottom_scale"
        android:layout_width="81dp"
        android:layout_height="93dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="472dp"
        android:text="@string/buttontext_scale"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/topright_switch"
        android:layout_width="94dp"
        android:layout_height="105dp"
        android:layout_marginEnd="204dp"
        android:layout_marginTop="80dp"
        android:text="@string/buttontext_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bottomright_switch"
        android:layout_width="94dp"
        android:layout_height="105dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="204dp"
        android:text="@string/buttontext_switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/left_pyramid"
        android:layout_width="66dp"
        android:layout_height="108dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="208dp"
        android:text="@string/buttontext_pyramid"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/right_pyramid"
        android:layout_width="66dp"
        android:layout_height="100dp"
        android:layout_marginEnd="136dp"
        android:layout_marginTop="212dp"
        android:text="@string/buttontext_pyramid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/left_ftb"
        android:layout_width="51dp"
        android:layout_height="181dp"
        android:layout_marginEnd="532dp"
        android:layout_marginTop="152dp"
        android:text="@string/buttontext_ftb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/right_ftb"
        android:layout_width="51dp"
        android:layout_height="181dp"
        android:layout_marginEnd="436dp"
        android:layout_marginTop="152dp"
        android:text="@string/buttontext_ftb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/left_platform1"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="80dp"
        android:textOff="@string/tbtnOfftext_platform1"
        android:textOn="@string/tbtnOntext_platform1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/left_platform2"
        android:layout_width="53dp"
        android:layout_height="58dp"
        android:layout_marginBottom="328dp"
        android:layout_marginStart="304dp"
        android:text="ToggleButton"
        android:textOff="@string/tbtnOfftext_platform2"
        android:textOn="@string/tbtnOntext_platform2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/left_platform3"
        android:layout_width="53dp"
        android:layout_height="57dp"
        android:layout_marginBottom="266dp"
        android:layout_marginStart="304dp"
        android:text="ToggleButton"
        android:textOff="@string/tbtnOfftext_platform3"
        android:textOn="@string/tbtnOntext_platform3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton4"
        android:layout_width="53dp"
        android:layout_height="59dp"
        android:layout_marginBottom="199dp"
        android:layout_marginStart="304dp"
        android:text="ToggleButton"
        android:textOff="@string/tbtnOfftext_platform4"
        android:textOn="@string/tbtnOntext_platform4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/left_platform5"
        android:layout_width="51dp"
        android:layout_height="61dp"
        android:layout_marginBottom="134dp"
        android:layout_marginStart="304dp"
        android:text="ToggleButton"
        android:textOff="@string/tbtnOfftext_platform5"
        android:textOn="@string/tbtnOntext_platform5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/left_platform6"
        android:layout_width="50dp"
        android:layout_height="57dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="119dp"
        android:textOff="@string/tbtnOfftext_platform6"
        android:textOn="@string/tbtnOntext_platform6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bottom_scale" />

    <ToggleButton
        android:id="@+id/right_platform6"
        android:layout_width="53dp"
        android:layout_height="57dp"
        android:layout_marginEnd="308dp"
        android:layout_marginTop="80dp"
        android:textOff="@string/tbtnOfftext_platform6"
        android:textOn="@string/tbtnOntext_platform6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/right_platform5"
        android:layout_width="53dp"
        android:layout_height="57dp"
        android:layout_marginEnd="308dp"
        android:layout_marginTop="140dp"
        android:textOff="@string/tbtnOfftext_platform5"
        android:textOn="@string/tbtnOntext_platform5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/right_platform4"
        android:layout_width="53dp"
        android:layout_height="57dp"
        android:layout_marginEnd="308dp"
        android:layout_marginTop="204dp"
        android:text="ToggleButton"
        android:textOff="@string/tbtnOfftext_platform4"
        android:textOn="@string/tbtnOntext_platform4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/right_platform3"
        android:layout_width="53dp"
        android:layout_height="57dp"
        android:layout_marginEnd="308dp"
        android:layout_marginTop="268dp"
        android:text="ToggleButton"
        android:textOff="@string/tbtnOfftext_platform3"
        android:textOn="@string/tbtnOntext_platform3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/right_platform2"
        android:layout_width="53dp"
        android:layout_height="57dp"
        android:layout_marginEnd="308dp"
        android:layout_marginTop="332dp"
        android:textOff="@string/tbtnOfftext_platform2"
        android:textOn="@string/tbtnOntext_platform2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/right_platform1"
        android:layout_width="57dp"
        android:layout_height="61dp"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="304dp"
        android:textOff="@string/tbtnOfftext_platform1"
        android:textOn="@string/tbtnOntext_platform1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>